GNOME Bugzilla – Bug 768549
Test failure: test_ip_sync_dgram
Last modified: 2016-07-12 13:14:49 UTC
Building glib-2.48.1 on OS X 10.11 with xcode-7.3.1, I get a self-test failure in gio/tests: ERROR: inet-address - too few tests run (expected 11, got 6) ERROR: inet-address - exited with status 134 (terminated by signal 6?) From gio/tests/socket.log: PASS: socket 12 /socket/unix-connection-ancillary-data ** GLib-GIO:ERROR:socket.c:709:test_ip_sync_dgram: assertion failed (error == NULL): Error sending message: Destination address required (g-io-error-quark, 0) # Start of ipv4_sync tests ../../tap-test: line 5: 35935 Abort trap: 6 $1 -k --tap # GLib-GIO:ERROR:socket.c:709:test_ip_sync_dgram: assertion failed (error == NULL): Error sending message: Destination address required (g-io-error-quark, 0) ERROR: socket - too few tests run (expected 20, got 12) ERROR: socket - exited with status 134 (terminated by signal 6?) This test is documented to see how g_socket_send_messages() behaves when "omitting the destination address".
Created attachment 331278 [details] [review] Remove an erroneous check in the non-sendmmsg() version of g_socket_send_messages() -------- Philip, this is correct, right?
(In reply to Dan Winship from comment #1) > Created attachment 331278 [details] [review] [review] > Remove an erroneous check in the non-sendmmsg() version of > g_socket_send_messages() > > -------- > > Philip, this is correct, right? Yes, looks correct, though the commit message could do with being a bit more explanatory.
Attachment 331278 [details] pushed as e0bb25c - Remove an erroneous check in the non-sendmmsg() version of g_socket_send_messages()