Remove an erroneous check in the non-sendmmsg() version of g_socket_send_messages()

The docs specify that *all* errors are ignored if we managed to send
any data successfully, not just timeout/wouldblock.

https://bugzilla.gnome.org/show_bug.cgi?id=768549